fixed shop now button in product three so it stays at bottom on mobile

--- a/Lofi-Aperitifs Website/homepage.css
+++ b/Lofi-Aperitifs Website/homepage.css
@@ -286,10 +286,21 @@ lowerNav li {
 
 .productThree {
     text-align: center;
+    position: relative;
 }
 
 .productThree section {
     padding-bottom: 2.5rem !important;
+}
+
+.productThreeButtonDiv {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+}
+
+.productThreeButton {
+    margin: 0 auto;
 }
 
 
